# pyqa-30min

./: .gitignore  README.md  pyproject.toml  references.yaml  settings.toml
.devcontainer/: environment.yml
backups/tests/deco_demos/: test_wrapper_deco.py
backups/tests/dot_wizards/: test_dot_main.py
backups/tests/json_all/: test_json_encode_decode.py
backups/tests/plugins/: test_module_loader.py  test_plugin_loader.py
backups/tests/r_dao/: test_databases.py
backups/tests/r_di/: test_utils.py
backups/tests/r_dispatch/: test_aio_listeners.py  test_aio_lock.py  test_events.py  test_properties.py  test_subclass_init.py
docs/: index.md
docs/0-setup/: 1-poetry.md  2-conda.md  3-jupter-notebook.md
docs/1-config/: config-in-short.md
migrations/versions/: 711c3e860dc5_create_products_table.py
src/gen_ai/api/: base.py
src/gen_ai/notebooks/: langchain-agents-explain.ipynb
src/gen_ai/notebooks/data_viz/: lets_plot_demos.ipynb
src/revisited/r_config/: dynaconf_settings_demo.py
src/revisited/r_di/: __init__.py  container.py  provider.py
src/revisited/r_templates/: template_demo.py
src/revisited/r_templates/templates/: examples.txt
tests/: conftest.py  test_dynaconf_settings_demo.py
tests/di/: test_configuration.py  test_injector.py  test_provider.py
