[tool.poetry]
name = "pyqa-30min"
version = "0.1.0"
description = ""
authors = ["fluent-qa <fluent-qa@163.com>"]
packages = [
    { from = "src", include = "revisited" },
    { from = "src", include = "gen_ai" },
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[options]
package_dirt="src"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath=["src"]